--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ maintainers = [
 ]
 requires-python = ">=3.11"
 readme = "README.md"
+
 dependencies = [
     "alembic==1.13.2",
     "sqlalchemy==2.0.41",
@@ -19,6 +20,9 @@ dependencies = [
     "httpx==0.28.1",
     "gunicorn==23.0.0",
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [dependency-groups]
 dev = [
