Feat: backend endpoint to get weather by lat and lon

--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,12 @@ cookiecutter-pypackage-env/
 
 # IDE settings
 .vscode/
-.claude/
 backend/.venv
 
 *.egg-info/
 build/
 dist/
+
+# Claude context
+.claude/
+SESSION_SUMMARY.md
