--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,10 @@ dependencies = [
     "PyYAML==6.0.1",
     "httpx==0.28.1",
     "gunicorn==23.0.0",
+    "openmeteo-requests>=1.7.2",
+    "requests-cache>=1.2.1",
+    "retry-requests>=2.0.0",
+    "pandas>=2.3.2",
 ]
 
 [tool.setuptools.packages.find]
