--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "requests-cache>=1.2.1",
     "retry-requests>=2.0.0",
     "pandas>=2.3.2",
+    "redis>=6.4.0",
 ]
 
 [tool.setuptools.packages.find]
