--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 volumes:
   base-data:
   db-data:
+  redis-data:
+  redisinsight:
 
 services:
   db:
@@ -37,9 +39,24 @@ services:
         condition: service_healthy
     environment:
       - PYTHONUNBUFFERED=0
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
     volumes:
       - base-data:/data
       - ./backend/src:/code/src
       - ./backend/tests:/code/tests
       - ./backend/alembic.ini:/code/alembic.ini
       - ./backend/logconfig.yml:/code/logconfig.yml
+
+  redis:
+    image: redis:7-alpine
+    volumes:
+      - redis-data:/data
+
+  redisinsight:
+    image: redislabs/redisinsight:latest
+    ports:
+      - "8001:8001"
+    volumes:
+      - redisinsight:/db
