--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,12 +51,14 @@ services:
 
   redis:
     image: redis:7-alpine
+    ports:
+      - "6380:6379"
     volumes:
       - redis-data:/data
 
   redisinsight:
     image: redislabs/redisinsight:latest
     ports:
-      - "8001:8001"
+      - "5540:5540"
     volumes:
       - redisinsight:/db
